2008-11-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten ByteArrayDiskWriter::size() using seekg() and tellg().
	Removed const qualifier from DiskWriter::size().
	* src/AbstractDiskWriter.cc
	* src/AbstractDiskWriter.h
	* src/ByteArrayDiskWriter.cc
	* src/ByteArrayDiskWriter.h
	* src/DiskWriter.h
	* test/ByteArrayDiskWriterTest.cc
	
2008-11-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that causes segmentation fault/bus error during executing
	choking algorithm while seeding. This is caused by improper
	implementation of compare function which returns inconsistent results
	depending on the timing of last unchoke.
	* src/BtSeederStateChoke.cc
	* src/BtSeederStateChoke.h
	* src/DefaultPeerStorage.cc

2008-11-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed TODO
	* TODO

2008-11-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added a section that explains how to pass argument to options that
	takes optional arguments with its short form.
	* doc/aria2c.1.txt
	
2008-11-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added -u for the short form of --max-upload-limit option.
	* doc/aria2c.1.txt
	* src/option_processing.cc
	* src/usage_text.h

2008-11-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added -V for the short form of --check-integrity option.
	Now the argument of --check-integrity option is optional:
	if it is omitted, it is evaluated as true.
	* doc/aria2c.1.txt
	* src/option_processing.cc
	* src/usage_text.h

2008-11-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made the default value of --ftp-pasv option set to true and it can take
	true/false values.
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc
	* src/usage_text.h
	* doc/aria2c.1.txt

2008-11-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Given custom random number generator to std::random_shuffle.
	* src/AnnounceList.cc